[project]
name = "apexml"
version = "0.1.0"
description = "a toy of deeplearning framework"
authors = [{ name = "allen", email = "allenshaw19@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pytest (>=8.3.4,<9.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9.6"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
